WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
308117
ANGLE: Fix static_assert messages in GetPrimitiveRestartIndexFromType
https://bugs.webkit.org/show_bug.cgi?id=308117
Summary
ANGLE: Fix static_assert messages in GetPrimitiveRestartIndexFromType
Ruthvik Konda
Reported
2026-02-18 01:05:04 PST
ANGLE: Fix static_assert messages in GetPrimitiveRestartIndexFromType
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-02-18 01:05:31 PST
<
rdar://problem/170618813
>
Ruthvik Konda
Comment 2
2026-02-18 01:07:43 PST
Pull request:
https://github.com/WebKit/WebKit/pull/58911
EWS
Comment 3
2026-02-18 10:49:54 PST
Committed
307772@main
(be31fb4e83c7): <
https://commits.webkit.org/307772@main
> Reviewed commits have been landed. Closing PR #58911 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug