Cherry-pick be31fb4e83c7. rdar://175537786

ANGLE: Fix static_assert messages in GetPrimitiveRestartIndexFromType
    https://bugs.webkit.org/show_bug.cgi?id=308117
    rdar://170618813

    Reviewed by Mike Wyrzykowski.

    The static_assert messages for uint16_t and uint32_t incorrectly say
    "verify restart index for uint8_t values".  Fix the messages to
    reference the correct types.

    No new tests since no change in behavior.

    * Source/ThirdParty/ANGLE/src/common/utilities.h:

    Canonical link: https://commits.webkit.org/307772@main

Identifier: 305413.694@safari-7624.4-branch